Assignment vid-30, removed tini from image

--- a/assignment-dockerfile/Dockerfile
+++ b/assignment-dockerfile/Dockerfile
@@ -13,6 +13,6 @@ RUN npm install && npm cache clean --force
 
 COPY app.js .
 
-ENTRYPOINT ["tini", "--"]
+# ENTRYPOINT ["tini", "--"]
 
 CMD ["node", "app.js"]
