--- a/sample-multi-stage/Dockerfile
+++ b/sample-multi-stage/Dockerfile
@@ -1,9 +1,16 @@
 FROM node:18-slim as prod
 ENV NODE_ENV=production
 WORKDIR /app
+COPY package*.json .
+RUN npm install --production && npm cache clean --force
+COPY . .
+CMD ["node","/app/bin/www"]
 
 FROM prod as dev
 ENV NODE_ENV=development
+RUN npm install --production=false && npm cache clean --force
+CMD ["node_modules/nodemon/bin/nodemon.js","./bin/www","--inspect=0.0.0.0:9229"]
 
 FROM dev as test
 ENV NODE_ENV=development
+CMD ["npm","run","test"]
